# HTML-parser

./: CMakeLists.txt  README.md  main.cpp  vcpkg.json
cmake_build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ParserHTML.sln  ParserHTML.vcxproj  ParserHTML.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
cmake_build/ParserHTML.dir/Debug/: ParserHTML.exe.recipe  ParserHTML.ilk  ParserHTML.vcxproj.FileListAbsolute.txt
cmake_build/ParserHTML.dir/Debug/ParserHTML.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ParserHTML.lastbuildstate  ParserHTML.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
cmake_build/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
cmake_build/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
cmake_build/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
cmake_build/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
srs/: main.cpp  request.cpp  request.h
